examples/type_system/failing/103_missing_colon_lambda_param.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/103_missing_colon_lambda_param.flx
// error[E034]: Missing Type Annotation Colon
//
// Missing `:` in lambda parameter type annotation. Write it as `x: Type`.
//
//   examples/type_system/failing/103_missing_colon_lambda_param.flx:40:12
//    |
// 40 | let f = \x Int -> x
//    |            ^^^
//
// Hint:
//   Type annotations use `name: Type`.
//
//
// error[E034]: Missing Lambda Arrow
//
// I was expecting `->` after the lambda parameters, but I found the end of the file.
//
//   examples/type_system/failing/103_missing_colon_lambda_param.flx:40:19
//    |
// 40 | let f = \x Int -> x
//    |                   ^
//    |                   - this lambda parameter list ends here
//
// Note:
//   while parsing lambda expression
//
// Help:
//   Use `\x -> expr` or `\(x, y) -> expr`.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034
// expect-error: E034

let f = \x Int -> x
